--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "starter-express-api",
-  "version": "1.0.0",
+  "name": "controle-ti",
+  "version": "1.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
